--- a/EYAK(rev2)/app/src/main/res/layout/activity_main.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/activity_main.xml
@@ -7,46 +7,41 @@
     android:background="#F8FCF8"
     tools:context=".MainActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="0dp"
-        android:layout_height="86dp"
-        android:background="#F6FFDE"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#F6FFDE">
 
-    <ImageView
-        android:id="@+id/accountSetting"
-        android:layout_width="62dp"
-        android:layout_height="0dp"
-        android:layout_marginRight="7dp"
-        app:layout_constraintBottom_toBottomOf="@id/toolbar"
-        app:layout_constraintRight_toRightOf="@id/toolbar"
-        app:layout_constraintTop_toTopOf="@id/toolbar"
-        app:srcCompat="@drawable/baseline_manage_accounts_24"
-        app:tint="#757863" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/eyakLogo"
-        android:layout_width="70dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="7dp"
-        app:layout_constraintBottom_toBottomOf="@id/toolbar"
-        app:layout_constraintLeft_toLeftOf="@id/toolbar"
-        app:layout_constraintStart_toStartOf="@id/toolbar"
-        app:layout_constraintTop_toTopOf="@id/toolbar"
-        app:srcCompat="@drawable/eyak_logo" />
+            <ImageView
+                android:id="@+id/eyakLogo"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginLeft="5dp"
+                app:srcCompat="@drawable/eyak_logo" />
+
+            <TextView
+                android:id="@+id/titleView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/tmoney_bold"
+                android:text="지금이:약"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textColor="#757863" />
+        </LinearLayout>
+
+    </FrameLayout>
 
     <LinearLayout
         android:id="@+id/BottomLinearLayout"
         android:layout_width="0dp"
-        android:layout_height="86dp"
+        android:layout_height="70dp"
         android:background="#F6FFDE"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -60,6 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:padding="15dp"
             app:srcCompat="@drawable/baseline_access_time_24"
             app:tint="#C9DBB2" />
 
@@ -68,6 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:padding="15dp"
             app:srcCompat="@drawable/baseline_medication_24"
             app:tint="#C9DBB2" />
 
@@ -76,6 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:padding="15dp"
             app:srcCompat="@drawable/baseline_family_restroom_24"
             app:tint="#C9DBB2" />
 
@@ -84,22 +82,19 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:padding="15dp"
             app:srcCompat="@drawable/baseline_all_inbox_24"
             app:tint="#C9DBB2" />
-    </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:fontFamily="@font/tmoney_bold"
-        android:text="지금이:약"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="#757863"
-        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
-        app:layout_constraintStart_toEndOf="@+id/eyakLogo"
-        app:layout_constraintTop_toTopOf="@+id/toolbar" />
+        <ImageView
+            android:id="@+id/accountSetting"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="15dp"
+            app:srcCompat="@drawable/baseline_manage_accounts_24"
+            app:tint="#C9DBB2" />
+    </LinearLayout>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/mainFragment"
