--- a/EYAK(rev2)/app/src/main/res/layout/activity_signup.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/activity_signup.xml
@@ -548,8 +548,7 @@
                         android:layout_gravity="right"
                         android:fontFamily="@font/tmoney_regular"
                         android:text="* 식사 시간은 평균적으로 식사하는 시간을 의미 합니다"
-                        android:textAlignment="viewEnd"
-                        android:textSize="12sp" />
+                        android:textAlignment="viewEnd" />
                 </LinearLayout>
 
             </FrameLayout>
