--- a/EYAK(rev2)/app/src/main/res/layout/alarm_tab_list_view_item.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/alarm_tab_list_view_item.xml
@@ -9,7 +9,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="200dp"
         android:layout_margin="20dp"
         app:cardBackgroundColor="#DDE6ED"
         app:cardCornerRadius="20dp"
@@ -21,41 +21,83 @@
             android:layout_height="wrap_content"
             android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
             android:backgroundTint="#DDE6ED"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:weightSum="9">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="4"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
-                android:paddingTop="5dp"
-                android:paddingRight="10dp"
-                android:paddingBottom="5dp">
+                android:weightSum="13">
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
 
                 <ImageView
                     android:id="@+id/medicine_icon"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
                     android:src="@drawable/eyak_logo" />
 
-                <TextView
-                    android:id="@+id/medicine_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="5dp"
-                    android:fontFamily="@font/tmoney_regular"
-                    android:text="오후 1:30"
-                    android:textColor="#757863"
-                    android:textSize="20dp" />
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:orientation="vertical"
+                    android:weightSum="6">
+
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1" />
+
+                    <TextView
+                        android:id="@+id/medicine_time1"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="2"
+                        android:fontFamily="@font/tmoney_regular"
+                        android:gravity="center_vertical"
+                        android:includeFontPadding="false"
+                        android:text="오후"
+                        android:textColor="#757863"
+                        android:textSize="20dp" />
+
+                    <TextView
+                        android:id="@+id/medicine_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="3"
+                        android:fontFamily="@font/tmoney_regular"
+                        android:gravity="center_vertical"
+                        android:includeFontPadding="false"
+                        android:text="13:30"
+                        android:textColor="#757863"
+                        android:textSize="20dp" />
+
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1" />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/medicine_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="10dp"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5"
                     android:fontFamily="@font/tmoney_bold"
+                    android:gravity="center_vertical"
+                    android:includeFontPadding="false"
                     android:text="약 이름 1"
                     android:textColor="#757863"
                     android:textSize="25dp" />
@@ -64,47 +106,65 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="2"
                 android:orientation="horizontal"
-                android:paddingLeft="5dp">
+                android:weightSum="20">
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginStart="10dp"
+                    android:layout_weight="8"
                     android:fontFamily="@font/tmoney_regular"
+                    android:gravity="center"
+                    android:includeFontPadding="false"
                     android:text="다음 약 복용까지"
                     android:textColor="#757863"
                     android:textSize="18dp" />
 
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
                 <TextView
                     android:id="@+id/medicine_time_left"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="10dp"
-                    android:fontFamily="@font/tmoney_regular"
+                    android:layout_weight="10"
+                    android:fontFamily="@font/tmoney_bold"
+                    android:gravity="center_vertical"
+                    android:includeFontPadding="false"
                     android:text="00:31:58"
                     android:textColor="#757863"
-                    android:textSize="25dp" />
+                    android:textSize="30dp" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="3"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingLeft="30dp"
-                android:paddingRight="30dp"
-                android:paddingBottom="3dp">
+                android:weightSum="9">
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
 
                 <Button
                     android:id="@+id/medicine_eat_button"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
+                    android:layout_weight="3"
                     android:backgroundTint="#E3F2C1"
                     android:fontFamily="@font/tmoney_regular"
                     android:includeFontPadding="false"
@@ -112,17 +172,27 @@
                     android:textColor="#757863"
                     android:textSize="17dp" />
 
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
                 <Button
                     android:id="@+id/medicine_delay_button"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
                     android:backgroundTint="#FF9B9B"
                     android:fontFamily="@font/tmoney_regular"
                     android:includeFontPadding="false"
                     android:text="미루기"
                     android:textColor="#757863"
                     android:textSize="17dp" />
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
 
             </LinearLayout>
         </LinearLayout>
