--- a/EYAK(rev2)/app/src/main/res/layout/alarm_tab_main.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/alarm_tab_main.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:weightSum="10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,13 +18,14 @@
         <LinearLayout
             android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="0dp"
+            android:layout_weight="2"
             android:orientation="horizontal"
             android:weightSum="3">
 
             <FrameLayout
                 android:id="@+id/yesterdayFrameLayout"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
@@ -31,6 +33,8 @@
                     android:id="@+id/yesterdayState"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:minWidth="0dp"
+                    android:minHeight="0dp"
                     app:srcCompat="@drawable/baseline_panorama_wide_angle_24" />
 
                 <TextView
@@ -41,8 +45,6 @@
                     android:gravity="center"
                     android:hint="yesterday"
                     android:includeFontPadding="false"
-                    android:minWidth="0dp"
-                    android:minHeight="0dp"
                     android:textColor="#757863"
                     android:textSize="20sp" />
 
@@ -50,7 +52,7 @@
 
             <FrameLayout
                 android:id="@+id/todayFrameLayout"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
@@ -68,15 +70,13 @@
                     android:gravity="center"
                     android:hint="today"
                     android:includeFontPadding="false"
-                    android:minWidth="0dp"
-                    android:minHeight="0dp"
                     android:textColor="#757863"
                     android:textSize="20sp" />
             </FrameLayout>
 
             <FrameLayout
                 android:id="@+id/tomorrowFrameLayout"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
@@ -94,8 +94,6 @@
                     android:gravity="center"
                     android:hint="tomorrow"
                     android:includeFontPadding="false"
-                    android:minWidth="0dp"
-                    android:minHeight="0dp"
                     android:textColor="#757863"
                     android:textSize="20sp" />
             </FrameLayout>
@@ -105,7 +103,37 @@
         <ListView
             android:id="@+id/alramListView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="0dp"
+            android:layout_weight="7" />
+
+        <LinearLayout
+            android:id="@+id/conditionLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:weightSum="7">
+
+            <ImageView
+                android:id="@+id/conditionImageView"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:tint="#757863"
+                app:srcCompat="@drawable/baseline_fact_check_24" />
+
+            <TextView
+                android:id="@+id/conditionTextView"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:fontFamily="@font/tmoney_bold"
+                android:gravity="center"
+                android:includeFontPadding="false"
+                android:text="오늘의 컨디션"
+                android:textColor="#757863"
+                android:textSize="32sp" />
+        </LinearLayout>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
